--- a/CSS/content.css
+++ b/CSS/content.css
@@ -1,6 +1,9 @@
 
-a:hover { text-decoration:none; background-color:#ddddff;}
+a { text-decoration:none; border-bottom: 1px dashed #6666ff; }
+a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
 
+.x-a-no-border { text-decoration:none; border-bottom: 0 none;}
+ 
 .x-acc-man-ref-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
 .x-address-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 6pt; margin-bottom: 6pt; margin-left: 0pt; text-indent: 0pt; }
@@ -66,33 +69,33 @@ a:hover { text-decoration:none; background-color:#ddddff;}
 .x-callout-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-callout-2-0 {margin-left: 0pt; margin-right: 0pt; }
 
-.x-caution-1-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt; }
-.x-caution-2-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt; }
-.x-caution-3-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt; }
-.x-caution-4-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt; }
-.x-caution-5-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt; }
-.x-caution-6-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
-.x-caution-7-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
-.x-caution-8-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
-.x-caution-9-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
-.x-caution-10-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
-.x-caution-11-0 {margin-right: 0pt; font-weight: bold; margin-left: 62pt; text-indent: -62pt; }
-.x-caution-12-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt;}
+.x-caution-1-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt; color: #222222; }
+.x-caution-2-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt; color: #222222; }
+.x-caution-3-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt; color: #222222; }
+.x-caution-4-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt; color: #222222; }
+.x-caution-5-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt; color: #222222; }
+.x-caution-6-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #222222; }
+.x-caution-7-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #222222; }
+.x-caution-8-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #222222; }
+.x-caution-9-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #222222; }
+.x-caution-10-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #222222; }
+.x-caution-11-0 {margin-right: 0pt; font-weight: bold; margin-left: 62pt; text-indent: -62pt; color: #222222; }
+.x-caution-12-0 {margin-right: 0pt; font-weight: bold; margin-left: 63pt; text-indent: -63pt; color: #222222; }
 
-.x-caution-wrapper-1-0 {margin-left: 18pt; margin-top: 8pt; padding: 2pt; border: 1px solid yellow;}
-.x-caution-wrapper-2-0 {margin-left: 18pt; margin-top: 8pt; padding: 2pt; border: 1px solid yellow;}
-.x-caution-wrapper-3-0 {margin-left: 24pt; margin-top: 8pt; padding: 2pt; border: 1px solid yellow;}
-.x-caution-wrapper-4-0 {margin-left: 35pt; margin-top: 8pt; padding: 2pt; border: 1px solid yellow;}
-.x-caution-wrapper-5-0 {margin-left: 35pt; margin-top: 8pt; padding: 2pt; border: 1px solid yellow;}
-.x-caution-wrapper-6-0 {padding: 2pt; border: 1px solid yellow;}
-.x-caution-wrapper-7-0 {padding: 2pt; border: 1px solid yellow;}
-.x-caution-wrapper-8-0 {padding: 2pt; border: 1px solid yellow;}
-.x-caution-wrapper-9-0 {padding: 2pt; border: 1px solid yellow;}
-.x-caution-wrapper-10-0 {padding: 2pt; border: 1px solid yellow;}
-.x-caution-wrapper-11-0 {margin-left: 18pt; margin-top: 8pt; padding: 2pt; border: 1px solid yellow;}
-.x-caution-wrapper-12-0 {margin-left: 1pt; margin-top: 10pt; padding: 2pt; border: 1px solid yellow;}
+.x-caution-wrapper-1-0 {margin-left: 18pt; margin-top: 8pt; padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
+.x-caution-wrapper-2-0 {margin-left: 18pt; margin-top: 8pt; padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
+.x-caution-wrapper-3-0 {margin-left: 24pt; margin-top: 8pt; padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
+.x-caution-wrapper-4-0 {margin-left: 35pt; margin-top: 8pt; padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
+.x-caution-wrapper-5-0 {margin-left: 35pt; margin-top: 8pt; padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
+.x-caution-wrapper-6-0 {padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
+.x-caution-wrapper-7-0 {padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
+.x-caution-wrapper-8-0 {padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
+.x-caution-wrapper-9-0 {padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
+.x-caution-wrapper-10-0 {padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
+.x-caution-wrapper-11-0 {margin-left: 18pt; margin-top: 8pt; padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
+.x-caution-wrapper-12-0 {margin-left: 1pt; margin-top: 10pt; padding: 2pt; border: 1px solid #9F6000; background-color: #FEEFB3;}
 
-.x-caution-label-1-0 {font-weight: bold; background-color: #FFFF00; text-decoration: underline;}
+.x-caution-label-1-0 {font-weight: bold; color: #9F6000;}
 
 .x-change-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-changebar-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
@@ -129,7 +132,7 @@ a:hover { text-decoration:none; background-color:#ddddff;}
 
 .x-connbr-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
-.x-consumable-1-0 {margin-left: 0pt; margin-right: 0pt; color: #000080; text-decoration: underline ; }
+.x-consumable-1-0 {margin-left: 0pt; margin-right: 0pt; color: #000080; }
 .x-consumables-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; }
 .x-consumables-1-1 {}
 
@@ -481,7 +484,10 @@ a:hover { text-decoration:none; background-color:#ddddff;}
 .x-note-12-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 43pt; text-indent: -43pt; }
 .x-note-12-1 {margin-left: 55pt; text-indent: -55pt; }
 
-.x-nowrap-1-0 {margin-left: 0pt; margin-right: 0pt; }
+.x-note-label-1-0 {font-weight: bold; text-decoration: underline; }
+.x-note-label-2-0 {text-decoration: underline; }
+
+.x-nowrap-1-0 {margin-left: 0pt; margin-right: 0pt; white-space:nowrap; }
 
 .x-np-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
@@ -571,10 +577,10 @@ a:hover { text-decoration:none; background-color:#ddddff;}
 .x-para-47-0 {margin-left: 0pt; margin-right: 0pt; margin-top: 8pt; }
 .x-para-48-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 18pt; text-indent: -18pt; }
 .x-para-49-0 {margin-left: 0pt; margin-right: 0pt; }
-.x-para-50-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 18pt; text-indent: 0pt; }
-.x-para-51-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 1.5em; text-indent: 0pt; margin-bottom: 6pt; }
-.x-para-52-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 18pt; text-indent: 0pt; }
-.x-para-53-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 18pt; text-indent: 0pt; }
+.x-para-50-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 18pt; }
+.x-para-51-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 1.5em; margin-bottom: 6pt; }
+.x-para-52-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 18pt; }
+.x-para {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 18pt; }
 
 .x-part-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-part-group-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 6pt; margin-bottom: 6pt; margin-left: 0pt; text-indent: 0pt; }
@@ -619,11 +625,11 @@ a:hover { text-decoration:none; background-color:#ddddff;}
 
 .x-postal-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
-.x-postsb-1-0 {margin-left: 0pt; margin-right: 0pt; color: #0000FF; text-decoration: underline ; text-decoration: underline ; }
+.x-postsb-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
 .x-post-tr-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
-.x-presb-1-0 {margin-left: 0pt; margin-right: 0pt; color: #0000FF; text-decoration: underline ; text-decoration: underline ; }
+.x-presb-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
 .x-prcitem-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; }
 .x-prcitem1-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 6pt; margin-bottom: 6pt; margin-left: 0pt; text-indent: 0pt; }
@@ -754,9 +760,9 @@ a:hover { text-decoration:none; background-color:#ddddff;}
 .x--sfe-CrossReference-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x--sfe-CrossReferenceTitle-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x--sfe-CrossReferenceTitle-2-0 {margin-left: 0pt; margin-right: 0pt; font-style: italic; }
-.x--sfe-ExternalLink-1-0 {margin-left: 0pt; margin-right: 0pt; color: #0000FF; text-decoration: underline ; }
+.x--sfe-ExternalLink-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x--sfe-Gentext-1-0 {margin-left: 0pt; margin-right: 0pt; }
-.x--sfe-InternalLink-1-0 {margin-left: 0pt; margin-right: 0pt; color: #0000FF; text-decoration: underline ; }
+.x--sfe-InternalLink-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x--sfe-RepeatingTitle-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
 
 .x-sfn-1-0 {margin-left: 0pt; margin-right: 0pt; }
@@ -870,6 +876,8 @@ a:hover { text-decoration:none; background-color:#ddddff;}
 .x-table-13-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; font-family: Arial; font-size: 9pt; }
 .x-table-14-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; font-family: Arial; margin-left: 18pt; text-indent: 0pt; }
 .x-table-14-1 {}
+
+.x-tab-fixed {table-layout: fixed;}
 
 .x-task-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; }
 .x-task-1-1 {}
@@ -1295,34 +1303,33 @@ a:hover { text-decoration:none; background-color:#ddddff;}
 .x-vendata-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 18pt; text-indent: 0pt; }
 .x-vendlist-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; }
 
-.x-warning-1-0 {margin-right: 0pt; font-weight: bold; margin-left: 6.5em; text-indent: -6.5em; }
-.x-warning-2-0 {margin-right: 0pt; margin-left: 66pt; text-indent: -66pt; }
-.x-warning-3-0 {margin-right: 0pt; font-weight: bold; margin-left: 65pt; text-indent: -65pt; }
-.x-warning-4-0 {margin-right: 0pt; font-weight: bold; margin-left: 67pt; text-indent: -67pt; }
-.x-warning-5-0 {margin-right: 0pt; margin-left: 66pt; text-indent: -66pt; }
-.x-warning-6-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
-.x-warning-7-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
-.x-warning-8-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
-.x-warning-9-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
-.x-warning-10-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
-.x-warning-11-0 {margin-right: 0pt; font-weight: bold; margin-left: 6.5em; text-indent: -6.5em; }
-.x-warning-12-0 {margin-right: 0pt; font-weight: bold; margin-left: 6.5em; text-indent: -6.5em; }
+.x-warning-1-0 {margin-right: 0pt; font-weight: bold; margin-left: 6.5em; text-indent: -6.5em; color: #222222;}
+.x-warning-2-0 {margin-right: 0pt; margin-left: 66pt; text-indent: -66pt; color: #222222;}
+.x-warning-3-0 {margin-right: 0pt; font-weight: bold; margin-left: 65pt; text-indent: -65pt; color: #222222;}
+.x-warning-4-0 {margin-right: 0pt; font-weight: bold; margin-left: 67pt; text-indent: -67pt; color: #222222;}
+.x-warning-5-0 {margin-right: 0pt; margin-left: 66pt; text-indent: -66pt; color: #222222;}
+.x-warning-6-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #222222;}
+.x-warning-7-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #222222;}
+.x-warning-8-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #222222;}
+.x-warning-9-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #222222;}
+.x-warning-10-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #222222;}
+.x-warning-11-0 {margin-right: 0pt; font-weight: bold; margin-left: 6.5em; text-indent: -6.5em; color: #222222;}
+.x-warning-12-0 {margin-right: 0pt; font-weight: bold; margin-left: 6.5em; text-indent: -6.5em; color: #222222;}
 
-.x-warning-wrapper-1-0 {margin-top: 8pt; padding: 2pt; border: 1px solid red;}
-.x-warning-wrapper-2-0 {margin-left: 17pt;margin-top: 8pt; padding: 2pt; border: 1px solid red;}
-.x-warning-wrapper-3-0 {margin-left: 24pt; margin-top: 8pt; padding: 2pt; border: 1px solid red;}
-.x-warning-wrapper-4-0 {margin-left: 19pt; margin-top: 8pt; padding: 2pt; border: 1px solid red;}
-.x-warning-wrapper-5-0 {margin-left: 17pt; margin-top: 8pt; padding: 2pt; border: 1px solid red;}
-.x-warning-wrapper-6-0 {padding: 2pt; border: 1px solid red;}
-.x-warning-wrapper-7-0 {padding: 2pt; border: 1px solid red;}
-.x-warning-wrapper-8-0 {padding: 2pt; border: 1px solid red;}
-.x-warning-wrapper-9-0 {padding: 2pt; border: 1px solid red;}
-.x-warning-wrapper-10-0 {margin-top: 8pt; padding: 2pt; border: 1px solid red;}
-.x-warning-wrapper-11-0 {margin-left: 2em; margin-top: 8pt; padding: 2pt; border: 1px solid red;}
-.x-warning-wrapper-12-0 {margin-top: 8pt; padding: 2pt; border: 1px solid red;}
+.x-warning-wrapper-1-0 {margin-top: 8pt; padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
+.x-warning-wrapper-2-0 {margin-left: 17pt;margin-top: 8pt; padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
+.x-warning-wrapper-3-0 {margin-left: 24pt; margin-top: 8pt; padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
+.x-warning-wrapper-4-0 {margin-left: 19pt; margin-top: 8pt; padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
+.x-warning-wrapper-5-0 {margin-left: 17pt; margin-top: 8pt; padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
+.x-warning-wrapper-6-0 {padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
+.x-warning-wrapper-7-0 {padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
+.x-warning-wrapper-8-0 {padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
+.x-warning-wrapper-9-0 {padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
+.x-warning-wrapper-10-0 {margin-top: 8pt; padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
+.x-warning-wrapper-11-0 {margin-left: 2em; margin-top: 8pt; padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
+.x-warning-wrapper-12-0 {margin-top: 8pt; padding: 2pt; border: 1px solid #D8000C; background-color: #FFBABA;}
 
-
-.x-warning-label-1-0 {font-weight: bold; color: #FFFF00; background-color: #FF0000; text-decoration: underline;} 
+.x-warning-label-1-0 {font-weight: bold; color: #D8000C; } 
 
 .x-xref-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-xref-2-0 {margin-left: 0pt; margin-right: 0pt; }
@@ -1336,6 +1343,7 @@ a:hover { text-decoration:none; background-color:#ddddff;}
 .x--zero-left-margins {margin-left: 0pt; text-indent: 0pt; }
 .x--zero-text-indent {text-indent: 0pt; }
 .x--zero-top-bot-margins {margin-top: 0pt; margin-bottom: 0pt; }
+
 .x-zip-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-zip-1-1 {}
 
@@ -1458,7 +1466,7 @@ table table[class~="x-unlitem-11-0"] {width: 100%; }
 table table[class~="x-unlitem-12-0"] {width: 100%; }
 table table[class~="x-unlitem-13-0"] {width: 100%; }
 
-.entry-in-tbody {margin-left: 0pt; margin-right: 0pt; }
+.x-ent {margin-left: 0pt; margin-right: 0pt; }
 
 table[frame="box"][border]:not([border="0"]), table[frame="border"][border]:not([border="0"]), table:not([frame])[border]:not([border="0"]) { border-style: solid; }
 table[rules][rules="none"]  > tr > td, table[rules][rules="none"] > * > tr > td, table[rules][rules="none"] > tr > th, table[rules][rules="none"] > * > tr > th, table[rules][rules="none"] > td, table[rules][rules="none"] > th { border-width: thin; border-style: none; }
