--- a/CSS/content.css
+++ b/CSS/content.css
@@ -55,7 +55,7 @@ a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
 
 .x-book-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-family: Verdana; font-size: 10pt; }
 
-.x-brk-1-0 {margin-left: 0pt; margin-right: 0pt; }
+.x-brk-1-0 {margin-left: 0pt; margin-right: 0pt; display:block;}
 
 .x-bs-group-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
@@ -667,7 +667,7 @@ a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
 
 .x-pwcatanbr-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
 .x-pwc-awl-1-0 {margin-left: 0pt; margin-right: 0pt; }
-.x-pwcbrk-1-0 {margin-left: 0pt; margin-right: 0pt; }
+.x-pwcbrk-1-0 {margin-left: 0pt; margin-right: 0pt; display:block;}
 .x-pwccallout-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-pwc-cgp-stmnt-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-size: 10pt; margin-top: 10pt; margin-bottom: 10pt; }
 
