--- a/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Web/Content/content.css
+++ b/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Web/Content/content.css
@@ -55,7 +55,7 @@ a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
 
 .x-book-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-family: Verdana; font-size: 10pt; }
 
-.x-brk-1-0 {margin-left: 0pt; margin-right: 0pt; }
+.x-brk-1-0 {margin-left: 0pt; margin-right: 0pt; display:block;}
 
 .x-bs-group-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
@@ -667,7 +667,7 @@ a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
 
 .x-pwcatanbr-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
 .x-pwc-awl-1-0 {margin-left: 0pt; margin-right: 0pt; }
-.x-pwcbrk-1-0 {margin-left: 0pt; margin-right: 0pt; }
+.x-pwcbrk-1-0 {margin-left: 0pt; margin-right: 0pt; display:block;}
 .x-pwccallout-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-pwc-cgp-stmnt-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-size: 10pt; margin-top: 10pt; margin-bottom: 10pt; }
 
@@ -1475,3 +1475,7 @@ table table[class~="x-unlitem-13-0"] {width: 100%; }
 table[frame="box"][border]:not([border="0"]), table[frame="border"][border]:not([border="0"]), table:not([frame])[border]:not([border="0"]) { border-style: solid; }
 table[rules][rules="none"]  > tr > td, table[rules][rules="none"] > * > tr > td, table[rules][rules="none"] > tr > th, table[rules][rules="none"] > * > tr > th, table[rules][rules="none"] > td, table[rules][rules="none"] > th { border-width: thin; border-style: none; }
 td, th, { border-color: #000000; }
+
+.pr-tbl {
+    margin-top: 10px;
+}
