--- a/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Web/Views/Shared/_Layout.cshtml
+++ b/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Web/Views/Shared/_Layout.cshtml
@@ -8,211 +8,17 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 
     <link href="~/Content/content.css" rel="stylesheet" type="text/css"></link>
-    <script src="~/Scripts/pwcdisplay.js" type="text/javascript"></script>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/pwcdisplay.js" type="text/javascript"></script>
     <script>
-        function euCAPrintPopup(paraIds, tableIds, figureIds) {
-            
-            var w = 600; // width
-            var h = 440; // height
-
-            // Calculate the position of the window, works for dualscreens configurations
-            var dualScreenLeft = window.screenLeft != undefined ? window.screenLeft : screen.left;
-            var dualScreenTop = window.screenTop != undefined ? window.screenTop : screen.top;
-
-            var width = window.innerWidth ? window.innerWidth : document.documentElement.clientWidth ? document.documentElement.clientWidth : screen.width;
-            var height = window.innerHeight ? window.innerHeight : document.documentElement.clientHeight ? document.documentElement.clientHeight : screen.height;
-
-            var left = ((width / 2) - (w / 2)) + dualScreenLeft; // left position
-            var top = ((height / 2) - (h / 2)) + dualScreenTop; // top position
-
-            // Open a popup window
-            var popup = open('', 'popup', 'toolbar=0, location=0, directories=0, status=0, menubar=0, scrollbars=0, resizable=0, width='+w+', height='+h+', top='+top+', left='+left);
-
-            // Set the content of the popup window
-            var html = 
-                '<title>Print options</title>'+
-                    '<body style="margin-top:10px; ">'+
-                        '<div style="font-family: Tahoma; font-size: 11pt;">'+
-                        '<script type="text/javascript">'+
-                            'function euCAToggle(btn)'+
-                            '{'+
-                                'switch(btn.id)'+
-                                '{'+
-                                    'case "all":'+
-                                        'document.getElementById("blockType").setAttribute("disabled", "disabled");'+
-                                        'document.getElementById("selectedIds").setAttribute("disabled", "disabled");'+
-                                        'break;'+
-                                    'case "ids":'+
-                                        'document.getElementById("blockType").removeAttribute("disabled");'+
-                                        'document.getElementById("selectedIds").removeAttribute("disabled");'+
-                                        'euCADisplayIds(document.idform.blockType.options[document.idform.blockType.selectedIndex].value);'+
-                                        'break;'+
-                                '}'+
-                            '}'+
-                            'function euCADisplayIds(option)'+
-                            '{'+
-                                'document.idform.selectedIds.options.length=0;'+
-                                'switch(option)'+
-                                '{'+
-                                    'case "paragraphs":';
-            var cpt = 0;
-            for(var i in paraIds)
-            {
-                html +=                 'document.idform.selectedIds.options['+(cpt++)+'] = new Option("'+paraIds[i]+'","'+i+'",false, false);';
-            }
-            html +=                 
-                                        'break;'+
-                                    'case "tables":';         
-            cpt = 0;
-            for(var i in tableIds)
-            {
-                html +=                 'document.idform.selectedIds.options['+(cpt++)+'] = new Option("'+tableIds[i]+'","'+i+'",false, false);';
-            }
-            html +=          
-                                        'break;'+
-                                    'case "figures":'; 
-            cpt = 0;
-            for(var i in figureIds)
-            {
-                    html +=             'document.idform.selectedIds.options['+(cpt++)+'] = new Option("'+figureIds[i]+'","'+i+'",false, false);';
-            }
-            html +=                                            
-                                        'break;'+
-                                '}'+
-                            '}'+
-                            'function euCASubmit()'+
-                            '{'+
-                                'document.getElementById("okBtn").setAttribute("disabled", "disabled");'+
-                                'var isOk = true;'+
-                                'var ids = [];'+
-                                'var printType = "";'+
-                                'for (var i = 0; i < document.idform.print.length; i++)'+
-                                '{'+
-                                    'if (document.idform.print[i].checked)'+
-                                    '{'+
-                                        'printType = document.idform.print[i].value;'+
-                                        'break;'+
-                                    '}'+
-                                '}'+
-                                'if (printType == "ids") {'+
-                                    'var slct = document.getElementById("selectedIds");'+
-                                    'for (var i = 0; i < slct.length; i++)'+
-                                    '{'+
-                                        'if(slct.options[i].selected == true)'+
-                                        '{'+
-                                            'ids.push(slct.options[i].value); '+
-                                        '}'+
-                                    '}'+
-                                    'if (ids.length == 0)'+
-                                    '{'+
-                                        'isOk = confirm("You didn\'t select a block: the whole document will be printed.\\n\\nContinue?");'+
-                                    '}'+
-                                '}'+
-                                'if (isOk)'+
-                                '{'+
-                                    'window.close();'+
-                                    'try'+
-                                    '{' +
-                                        'window.opener.HandlePopupResult(ids);'+
-                                    '}'+
-                                    'catch (err) {}'+
-                                "}"+
-                            '}' +
-                            'function init() {' +
-                                'document.getElementById("okBtn").focus();' +
-                            '}' +
-                            'window.onload= init;'+
-                        '</'+'script>'+
-                        '<form name="idform">'+
-                            '<div id="wrapper" style="display:table; height:100%; width:100%">'+
-                                '<div id="top" style="display:table-row; height:45px;">'+
-                                    '<input type="radio" id="all" name="print" value="all" checked="checked" onclick="euCAToggle(this)"/>'+
-                                    '<span style="padding-left:5px;">Print all</span><br/>'+
-                                    '<div style="display:table;">'+
-                                        '<div style="display:table-cell; width:1%; white-space:nowrap; padding-right:20px;">'+
-                                            '<input type="radio" id="ids" name="print" value="ids" onclick="euCAToggle(this)"/>'+
-                                            '<span style="padding-left:5px;">Selected blocks:</span>'+
-                                        '</div>'+
-                                        '<div style="display: table-cell; width:99%">'+
-                                            '<select id="blockType" name="blockType" style="width:100%;" disabled="disabled" onChange="euCADisplayIds(this.value)">'+
-                                                '<option value="paragraphs">Paragraphs</option>'+
-                                                '<option value="tables">Tables</option>'+
-                                                '<option value="figures">Figures</option>'+
-                                            '</select><br/>'+
-                                        '</div>'+
-                                    '</div>'+
-                                '</div>'+
-                                '<div id="middle" style="display:table-row;">'+
-                                    '<select id="selectedIds" name="selectedIds" size="20" style="margin-top:10px; width:100%; height: 100%; disabled="disabled" multiple="multiple">'+
-                                    '</select><br/>'+
-                                '</div>'+
-                                '<div id="bottom" style="display:table-row; height:40px;">'+
-                                    '<div style="text-align: right; padding-top:20px">'+
-                                        '<a onclick="euCASubmit();">'+
-                                            '<input type="button" value="OK" id="okBtn" name="okBtn" style="width: 80px;"/>'+
-                                        '</a>'+
-                                        '<a onclick="window.close();" style="padding-left:10px;">'+
-                                            '<input type="button" value="Cancel" style="width: 80px;"/>'+
-                                        '</a>'+
-                                    '</div>'+
-                                '</div>'+
-                            '</div>'+
-                        '</form>'+
-                    '</div>'+
-                '</body>';
-            popup.document.write(html);
-            popup.document.close();
-            
-            // Gives the focus to the popup window if it doesn't have it
-            if (window.focus) {
-                popup.focus();
-            }
-        }
         
-        function euCAGetIDs() {
-            
+        function printPDF() {
             var paraIds = new Object();
             var tableIds = new Object();
             var figureIds = new Object();
 
-            $('div[class^="pr-tbl"]').each(function() {
-                var txt = $.trim($(this).find("div[class^='x-title']").first().text());
-                if (txt.length == 0) { txt = $.trim($(this).children(':first').text()); }                
-                if (txt.length != 0) {
-                    tableIds[$(this).attr('id')] = txt;
-                }
-                
-            });
-            
-            $('div[class^="x-pageblock-front"]').each(function () {
-                var childs = $(this).children('div').each(function () {
-                    var txt = $.trim($(this).children(':first').text());
-                    if (txt.length != 0) {
-                        paraIds[$(this).attr('id')] = txt;
-                    }
-                })
-            });
-
-            $('div[class^="x-n-para"], div[class^="x-task"]').each(function() {
-                var txt = $.trim($(this).children(':first').text());
-                if (txt.length != 0) {
-                    paraIds[$(this).attr('id')] = txt;
-                }
-            });
-
-            $('div[class^="pr-figure"]').each(function() {
-                var txt = $.trim($(this).children(':first').text());
-                if (txt.length != 0) {
-                    figureIds[$(this).parent().attr('id')] = txt;
-                }
-            });
-
-            euCAPrintPopup(paraIds, tableIds, figureIds);
-        }
-
-        function printPDF() {
-            euCAGetIDs();
+            euCAGetIDs(paraIds, tableIds, figureIds);
+            euCAPrintPopup(paraIds, tableIds, figureIds, 'HandlePopupResult');
         }
 
         function HandlePopupResult(ids, figureOnly)
@@ -264,19 +70,6 @@
             @if (!string.IsNullOrEmpty(ViewBag.Anchor))
             {
                 @:$("html, body").animate({ scrollTop: $('@ViewBag.Anchor').offset().top }, 1000);
-            }
-
-            if (typeof (eopdf) == "object")
-            {
-                // Variable eopdf exists. So we are inside the converter
-                euCAShowHiddenBlocks();
-            }
-            else
-            {                
-                //Variable eopdf does not exist. So we are inside a
-                //regular Web browser
-                // Do nothing;
-                euCAShowHiddenBlocks();
             }
         }
         $(document).ready(myFunction);
