change in js method signature

--- a/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Web/Views/Shared/_Layout.cshtml
+++ b/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             euCAPrintPopup(paraIds, tableIds, figureIds, 'HandlePopupResult');
         }
 
-        function HandlePopupResult(ids, figureOnly)
+        function HandlePopupResult(ids)
         {
             var results = "";
             for (id in ids) {
