--- a/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Web/Content/content.css
+++ b/C#/Project/HTMLToPDFConverter/EuCA.Pdf.Web/Content/content.css
@@ -1,18 +1,30 @@
+.yui3-cssreset body {
+    background-color: #ffffff;
+    color: initial;
+    text-align: initial;
+}
+.yui3-cssreset th, .yui3-cssreset td {
+    margin: 5px;
+    padding: 5px;
+}
+.yui3-cssreset table {
+    border-spacing: initial;
+}
 
-a { text-decoration:none; border-bottom: 1px dashed #6666ff; }
-a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
+.yui3-cssreset  a { text-decoration:none; border-bottom: 1px dashed #6666ff; }
+.yui3-cssreset  a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
 
 .x-a-no-border { text-decoration:none; border-bottom: 0 none;}
  
 .x-acc-man-ref-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
-.x-address-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 6pt; margin-bottom: 6pt; margin-left: 0pt; text-indent: 0pt; }
-.x-address-2-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 6pt; margin-bottom: 6pt; margin-left: 0pt; text-indent: 0pt; }
-.x-address-3-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 6pt; margin-bottom: 6pt; margin-left: 0pt; text-indent: 0pt; }
-.x-address-4-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 6pt; margin-bottom: 6pt; margin-left: 0pt; text-indent: 0pt; }
-.x-address-5-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 6pt; margin-bottom: 6pt; margin-left: 0pt; text-indent: 0pt; }
-.x-address-6-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 6pt; margin-bottom: 6pt; margin-left: 0pt; text-indent: 0pt; }
-.x-address-7-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 6pt; margin-bottom: 6pt; margin-left: 0pt; text-indent: 0pt; }
+.x-address-1-0,
+.x-address-2-0 ,
+.x-address-3-0 ,
+.x-address-4-0,
+.x-address-5-0 ,
+.x-address-6-0 ,
+.x-address-7-0 ,
 .x-address-8-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 6pt; margin-bottom: 6pt; margin-left: 0pt; text-indent: 0pt; }
 
 .x-adt-1-0 {margin-left: 0pt; margin-right: 0pt; }
@@ -1351,9 +1363,9 @@ a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
 .x-zip-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-zip-1-1 {}
 
-body {font-family: serif; font-weight: normal; font-style: normal; score-spaces: true; line-height: 1.1; margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-family: Verdana; font-size: 10pt; margin-left: 5px; width: 95%; }
+.yui3-cssreset body {font-family: serif; font-weight: normal; font-style: normal; score-spaces: true; line-height: 1.1; margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-family: Verdana; font-size: 10pt; margin-left: 5px; width: 95%; }
 
-table {border-color: #000000; font-size: 100%; border-collapse: collapse; }
+.yui3-cssreset table {border-color: #000000; font-size: 100%; border-collapse: collapse; }
 
 table table[class~="x-address-1-0"] {width: 100%; }
 table table[class~="x-address-2-0"] {width: 100%; }
@@ -1472,9 +1484,9 @@ table table[class~="x-unlitem-13-0"] {width: 100%; }
 
 .x-ent {margin-left: 0pt; margin-right: 0pt; }
 
-table[frame="box"][border]:not([border="0"]), table[frame="border"][border]:not([border="0"]), table:not([frame])[border]:not([border="0"]) { border-style: solid; }
-table[rules][rules="none"]  > tr > td, table[rules][rules="none"] > * > tr > td, table[rules][rules="none"] > tr > th, table[rules][rules="none"] > * > tr > th, table[rules][rules="none"] > td, table[rules][rules="none"] > th { border-width: thin; border-style: none; }
-td, th, { border-color: #000000; }
+.yui3-cssreset table[frame="box"][border]:not([border="0"]), .yui3-cssreset table[frame="border"][border]:not([border="0"]), .yui3-cssreset table:not([frame])[border]:not([border="0"]) { border-style: solid; }
+.yui3-cssreset table[rules][rules="none"]  > tr > td, .yui3-cssreset table[rules][rules="none"] > * > tr > td, .yui3-cssreset table[rules][rules="none"] > tr > th, .yui3-cssreset table[rules][rules="none"] > * > tr > th, .yui3-cssreset table[rules][rules="none"] > td, .yui3-cssreset table[rules][rules="none"] > th { border-width: thin; border-style: none; }
+.yui3-cssreset td, .yui3-cssreset th { border-color: #000000; }
 
 .pr-tbl {
     margin-top: 10px;
