--- a/CSS/content.css
+++ b/CSS/content.css
@@ -1,6 +1,6 @@
 
-a { text-decoration:none; border-bottom: 1px dashed #6666ff; }
-a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
+.x-body a { text-decoration:none; border-bottom: 1px dashed #6666ff; }
+.x-body a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
 
 .x-a-no-border { text-decoration:none; border-bottom: 0 none;}
  
@@ -1351,9 +1351,9 @@ a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
 .x-zip-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-zip-1-1 {}
 
-body {font-family: serif; font-weight: normal; font-style: normal; score-spaces: true; line-height: 1.1; margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-family: Verdana; font-size: 10pt; margin-left: 5px; width: 95%; }
+.x-body {font-family: serif; font-weight: normal; font-style: normal; score-spaces: true; line-height: 1.1; margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-family: Verdana; font-size: 10pt; margin-left: 5px; width: 95%; }
 
-table {border-color: #000000; font-size: 100%; border-collapse: collapse; }
+.x-body table {border-color: #000000; font-size: 100%; border-collapse: collapse; }
 
 table table[class~="x-address-1-0"] {width: 100%; }
 table table[class~="x-address-2-0"] {width: 100%; }
@@ -1474,4 +1474,4 @@ table table[class~="x-unlitem-13-0"] {width: 100%; }
 
 table[frame="box"][border]:not([border="0"]), table[frame="border"][border]:not([border="0"]), table:not([frame])[border]:not([border="0"]) { border-style: solid; }
 table[rules][rules="none"]  > tr > td, table[rules][rules="none"] > * > tr > td, table[rules][rules="none"] > tr > th, table[rules][rules="none"] > * > tr > th, table[rules][rules="none"] > td, table[rules][rules="none"] > th { border-width: thin; border-style: none; }
-td, th, { border-color: #000000; }
+.x-body td, .x-body th { border-color: #000000; }
