--- a/CSS/content.css
+++ b/CSS/content.css
@@ -1475,3 +1475,5 @@ table table[class~="x-unlitem-13-0"] {width: 100%; }
 table[frame="box"][border]:not([border="0"]), table[frame="border"][border]:not([border="0"]), table:not([frame])[border]:not([border="0"]) { border-style: solid; }
 table[rules][rules="none"]  > tr > td, table[rules][rules="none"] > * > tr > td, table[rules][rules="none"] > tr > th, table[rules][rules="none"] > * > tr > th, table[rules][rules="none"] > td, table[rules][rules="none"] > th { border-width: thin; border-style: none; }
 .x-body td, .x-body th { border-color: #000000; }
+
+.pr-tbl { margin-top: 10px; }
