correction display IE + double quote in TOC entry
IE : avoid useless spaces in big tables

--- a/Lib_BIL/CSS/content.css
+++ b/Lib_BIL/CSS/content.css
@@ -750,7 +750,7 @@
 .x-rev-date-2-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
 
 .x-revend-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
-.x-revst-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
+.x-revst-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; background-color:#CCCCCC; }
 
 .x-row-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-row-1-1 {}
